# ChangeLog for dev-util/scons
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.44 2007/04/14 12:58:53 genstef Exp $

*scons-0.96.96 (14 Apr 2007)

  14 Apr 2007; Stefan Schweizer <genstef@gentoo.org> -scons-0.96.95.ebuild,
  +scons-0.96.96.ebuild:
  version bump

  04 Apr 2007; Jeroen Roovers <jer@gentoo.org> scons-0.96.94.ebuild:
  Stable for HPPA (bug #173281).

*scons-0.96.95 (02 Mar 2007)

  02 Mar 2007; <twp@gentoo.org> -scons-0.96.94.ebuild,
  +scons-0.96.95.ebuild:
  Version bump. Bug #168970.

*scons-0.96.94 (01 Feb 2007)

  01 Feb 2007; <twp@gentoo.org> -scons-0.96.91.ebuild,
  -scons-0.96.92-r3.ebuild, -scons-0.96.93.ebuild, +scons-0.96.94.ebuild:
  Version bump.  Bug #162333.  Remove old versions.

  19 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  scons-0.96.1.ebuild, scons-0.96.91.ebuild, scons-0.96.92-r3.ebuild,
  scons-0.96.93.ebuild:
  QA: remove invalid RESTRICT="mirror"

*scons-0.96.93 (07 Dec 2006)

  07 Dec 2006; <twp@gentoo.org> +scons-0.96.93.ebuild:
  Version bump.  Bug # 157405.

*scons-0.96.92-r3 (09 Nov 2006)

  09 Nov 2006; <twp@gentoo.org> -scons-0.96.92-r2.ebuild,
  +scons-0.96.92-r3.ebuild:
  Remove man pages installed in /usr/man.  Bug # 154410.

*scons-0.96.92-r2 (07 Nov 2006)

  07 Nov 2006; <twp@gentoo.org> -scons-0.96.92.ebuild,
  -scons-0.96.92-r1.ebuild, +scons-0.96.92-r2.ebuild:
  Move clean-up code to pkg_postinst. Remove old versions. Bug # 153915.
  Thanks jakub.

*scons-0.96.92-r1 (03 Nov 2006)

  03 Nov 2006; <twp@gentoo.org> +scons-0.96.92-r1.ebuild:
  Remove orphaned files from previous buggy builds. Bug # 153915. Thanks jakub!

*scons-0.96.92 (23 Oct 2006)

  23 Oct 2006; <twp@gentoo.org> -scons-0.96.90.ebuild, scons-0.96.91.ebuild,
  +scons-0.96.92.ebuild:
  Version bump and clean up .py[co] files. Bugs # 118022, # 132448, and # 144978.

  26 May 2006; Diego Pettenò <flameeyes@gentoo.org> scons-0.96.1.ebuild: