@@ -1,32 +1,10 @@
 DIST scons-0.96.1.tar.gz 283576 RMD160 3957868c1bd0dcd8138e98b62d84ee83ad654bd4 SHA1 9ba5c47ffc1fa947b9984700d9a4f4c2368d74aa SHA256 67ea186c1c6270178da0c3411f8c94fcb6a070eb68c3d43f08f282b0728d0c7d
 DIST scons-0.96.94.tar.gz 408567 RMD160 2e50831de80c9e218b196c553c9b0f6afb650773 SHA1 607f5cf9af53dce7b5fb71cd5c0bc40bb49d03b3 SHA256 ca693ddad7734d549998fb91e11ffc15cea8e1e6bbf8383f4160d492cdf7527b
 DIST scons-0.96.96.tar.gz 438990 RMD160 23731a31b0e2ec13b2499c29de1052fbcf69098c SHA1 f604b9314f082a923169a437ae89de6f29792fe9 SHA256 104faae24768f3cb74b9999c564520d5e81e484aaddea901ed065f6abf07619e
+DIST scons-0.97.tar.gz 439523 RMD160 31af35ef62fe56a4faf291a4d6cb73de5a17d81f SHA1 732980f0f4dba7cba32fffca0b533497ef751afc SHA256 195df54afedd60767e55393187df0f1e7e0ddb3a46347a5ee82d5050f964c3ba
 EBUILD scons-0.96.1.ebuild 712 RMD160 fa68562228711fe9dc99abd93b65459e93ce75e8 SHA1 f00cdd1f168a3dd4be04c44a3dc885b35662bb69 SHA256 32fca06bfba109200ace5dcb140ee2d120f46dc2989c96fccea0adaa9a6011b2
-MD5 fff157e61b7d35baf4210dd56380001b scons-0.96.1.ebuild 712
-RMD160 fa68562228711fe9dc99abd93b65459e93ce75e8 scons-0.96.1.ebuild 712
-SHA256 32fca06bfba109200ace5dcb140ee2d120f46dc2989c96fccea0adaa9a6011b2 scons-0.96.1.ebuild 712
 EBUILD scons-0.96.94.ebuild 1151 RMD160 f1b0e08fd735c106207cbce37f33ddc5907dc1ba SHA1 7e34a739a3c72fa3c0d68dab75d3c92382178f87 SHA256 c3ecf081856627668556f8a85e2b1799fc212b1d1a4b762f6d8965bd972067f1
-MD5 0cbad14bd7ca72ab0bf3f0458ff60b44 scons-0.96.94.ebuild 1151
-RMD160 f1b0e08fd735c106207cbce37f33ddc5907dc1ba scons-0.96.94.ebuild 1151
-SHA256 c3ecf081856627668556f8a85e2b1799fc212b1d1a4b762f6d8965bd972067f1 scons-0.96.94.ebuild 1151
 EBUILD scons-0.96.96.ebuild 1168 RMD160 354761d8d5a999d8010f7ebc88754f97a24b6c81 SHA1 ca85fa48784ff62a24620bb4ac25a00ff8f8275b SHA256 322b318dfc9b51d43ae2ba991b71c71ca5d6aba5d48ef494db3832cc36d3543c
-MD5 12caac98f16fb69e9034a575e829b794 scons-0.96.96.ebuild 1168
-RMD160 354761d8d5a999d8010f7ebc88754f97a24b6c81 scons-0.96.96.ebuild 1168
-SHA256 322b318dfc9b51d43ae2ba991b71c71ca5d6aba5d48ef494db3832cc36d3543c scons-0.96.96.ebuild 1168
-MISC ChangeLog 6068 RMD160 ebdc54669f8fcfa2792f25f818bf4c60242a2573 SHA1 875992bea7221c7135999ead972b8ce6e25505d2 SHA256 723bf6fcdfd04088720fe10dea7e7f9829e74c361bfebbdd807613d69fa5b00e
-MD5 fc3b2f231157c3a76e41be3540f80960 ChangeLog 6068
-RMD160 ebdc54669f8fcfa2792f25f818bf4c60242a2573 ChangeLog 6068
-SHA256 723bf6fcdfd04088720fe10dea7e7f9829e74c361bfebbdd807613d69fa5b00e ChangeLog 6068
+EBUILD scons-0.97.ebuild 1161 RMD160 bef8192453e450a6729b0e5917ee45ff00c2b943 SHA1 6c226eddf0dc50778d9e0d0e711eee04291807e7 SHA256 b64d28439a071bcec4366c566e93c221fe12e81ce8afd8cc5267e11bc266174d
+MISC ChangeLog 6175 RMD160 fc34ae6b9488724b06c4bd6f3403dff08a7fbd55 SHA1 a7ea670ed20143cc9db9e4f29ba37b50952e16d8 SHA256 0962432f6a58be9e74d02309ee7706e3f4a48a26cae39758bc96e9b308b30888
 MISC metadata.xml 244 RMD160 10fcb6c60f0d88174ff99fd391d0da3a75bdf89d SHA1 bee870f83b6bd74feedef2b9ff8da8f4820cc19f SHA256 c7b6d3457d4746a2b281c4ac598bcf78b8e1553d8d63f2523b4cd0f4eaa422b1
-MD5 d992d28bec4a3bfd72b441145091a58e metadata.xml 244
-RMD160 10fcb6c60f0d88174ff99fd391d0da3a75bdf89d metadata.xml 244
-SHA256 c7b6d3457d4746a2b281c4ac598bcf78b8e1553d8d63f2523b4cd0f4eaa422b1 metadata.xml 244
-MD5 1cee711727209e84b0811be23d6fab93 files/digest-scons-0.96.1 238
-RMD160 e2693235b41feef5505d83beb92b7a6de8dc4e9a files/digest-scons-0.96.1 238
-SHA256 2df4407c89432d391dd99a995d30b883ded5477c97bb994472c1efb36e842e5d files/digest-scons-0.96.1 238
-MD5 6acca43aa2d20ee1191b2a905f974ad2 files/digest-scons-0.96.94 241
-RMD160 e310e0baebca1bf668a486748a59772623530042 files/digest-scons-0.96.94 241
-SHA256 493ad6ef7d93544f6c7457f22022b6201fff79f763a7ab0da240885a4089993f files/digest-scons-0.96.94 241
-MD5 fc50a4c03638e204eec3f1df51495f20 files/digest-scons-0.96.96 241
-RMD160 2d8892640b4ad172f2270e9c7846ca84a3374805 files/digest-scons-0.96.96 241
-SHA256 352676c8d6e0bf751f78eec44f54879bd72a7b9c1ec35a8b502479114dd8f18a files/digest-scons-0.96.96 241
