@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/scons
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.44 2007/04/14 12:58:53 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/scons/ChangeLog,v 1.45 2007/06/06 14:39:45 twp Exp $
+
+*scons-0.97 (06 Jun 2007)
+
+  06 Jun 2007; <twp@gentoo.org> +scons-0.97.ebuild:
+  Version bump.  Bug # 180323.
 
 *scons-0.96.96 (14 Apr 2007)
 
